[gd_scene load_steps=6 format=3 uid="uid://bydq8rtfu3hos"]

[ext_resource type="Script" uid="uid://dybaqxm0lv8k2" path="res://scripts/hand.gd" id="2_onrkg"]
[ext_resource type="Texture2D" uid="uid://poet0dgr717i" path="res://assets/scratch/background2.png" id="3_dqkch"]
[ext_resource type="Texture2D" uid="uid://c73glw5ng7tfc" path="res://assets/head.png" id="3_qhqgy"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_onrkg"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_g2els"]
friction = 23.45

[node name="root of player" type="Node2D"]

[node name="Body" type="RigidBody2D" parent="."]
mass = 30.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Body"]
position = Vector2(-9.53674e-07, 0)
scale = Vector2(0.4, 0.2)
polygon = PackedVector2Array(59.1, -64, -59, -64, -63.8, -59, -64, 61, -60.3, 64, 59.6, 64, 63.9, 59, 64, -61.1)

[node name="shoulder" type="PinJoint2D" parent="Body"]
position = Vector2(22, 0)
node_a = NodePath("..")
node_b = NodePath("../../upperarm")

[node name="Camera2D" type="Camera2D" parent="Body"]
zoom = Vector2(2, 2)
position_smoothing_enabled = true
rotation_smoothing_speed = 15.0

[node name="ColorRect" type="ColorRect" parent="Body"]
offset_left = -25.0
offset_top = -12.0
offset_right = 26.0
offset_bottom = 12.0
color = Color(0.184314, 0.211765, 0.6, 1)
metadata/_edit_use_anchors_ = true

[node name="upperarm" type="RigidBody2D" parent="."]
position = Vector2(41, 0)
collision_layer = 2
collision_mask = 2
mass = 5.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="upperarm"]
position = Vector2(-11, 0)
scale = Vector2(0.2, 0.1)
polygon = PackedVector2Array(59.1, -64, -59, -64, -63.8, -59, -64, 61, -60.3, 64, 59.6, 64, 63.9, 59, 64, -61.1)

[node name="PinJoint2D" type="PinJoint2D" parent="upperarm"]
position = Vector2(3, 0)
scale = Vector2(0.2, 0.1)
node_a = NodePath("..")
node_b = NodePath("../../forearm")

[node name="ColorRect" type="ColorRect" parent="upperarm"]
offset_left = -24.0
offset_top = -6.0
offset_right = 2.0
offset_bottom = 6.0
color = Color(0, 0.282353, 0.67451, 1)
metadata/_edit_use_anchors_ = true

[node name="forearm" type="RigidBody2D" parent="."]
position = Vector2(67, 0)
collision_layer = 4
collision_mask = 4
mass = 5.0
physics_material_override = SubResource("PhysicsMaterial_onrkg")
gravity_scale = 0.1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="forearm"]
position = Vector2(-9.53674e-07, 0)
scale = Vector2(0.2, 0.1)
polygon = PackedVector2Array(59.1, -64, -59, -64, -63.8, -59, -64, 61, -60.3, 64, 59.6, 64, 63.9, 59, 64, -61.1)

[node name="PinJoint2D" type="PinJoint2D" parent="forearm"]
position = Vector2(10, 0)
scale = Vector2(0.2, 0.01)
node_a = NodePath("..")
node_b = NodePath("../../hand")

[node name="ColorRect" type="ColorRect" parent="forearm"]
offset_left = -25.0
offset_top = -6.0
offset_right = 2.0
offset_bottom = 6.0
color = Color(0, 0.282353, 0.67451, 1)
metadata/_edit_use_anchors_ = true

[node name="hand" type="RigidBody2D" parent="."]
position = Vector2(77, 0)
collision_layer = 8
collision_mask = 8
mass = 2.0
physics_material_override = SubResource("PhysicsMaterial_g2els")
lock_rotation = true
script = ExtResource("2_onrkg")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="hand"]
position = Vector2(-9.53674e-07, 0)
scale = Vector2(0.1, 0.1)
polygon = PackedVector2Array(59.1, -64, -59, -64, -63.8, -59, -64, 61, -60.3, 64, 59.6, 64, 63.9, 59, 64, -61.1)

[node name="grab_area" type="Area2D" parent="hand"]
collision_layer = 8
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="hand/grab_area"]
position = Vector2(-9.53674e-07, 0)
scale = Vector2(0.15, 0.15)
polygon = PackedVector2Array(59.1, -64, -59, -64, -63.8, -59, -64, 61, -60.3, 64, 59.6, 64, 63.9, 59, 64, -61.1)

[node name="ColorRect2" type="ColorRect" parent="hand"]
offset_left = -6.0
offset_top = -6.0
offset_right = 6.0
offset_bottom = 6.0
color = Color(0.898039, 0.666667, 0.478431, 1)
metadata/_edit_use_anchors_ = true

[node name="head" type="RigidBody2D" parent="."]
z_index = -1
mass = 2.0

[node name="Icon" type="Sprite2D" parent="head"]
texture_filter = 1
position = Vector2(35, 0)
texture = ExtResource("3_qhqgy")

[node name="shoulder" type="PinJoint2D" parent="head"]
position = Vector2(26, 0)
node_a = NodePath("..")
node_b = NodePath("../../Body")
disable_collision = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="head"]
position = Vector2(35, 0)
polygon = PackedVector2Array(-5.1, -7.5, -7.1, -3.5, -7.5, 4.9, -4.9, 7.5, 3.9, 7.5, 5.9, 5.5, 7.5, 5.5, 7.5, -5.1, 3.5, -7.1)

[node name="loop_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.357566, 0.357566, 0.357566, 1)
z_index = -3
offset_left = -6674.0
offset_top = -8289.0
offset_right = 9929.0
offset_bottom = 6146.0
texture = ExtResource("3_dqkch")
stretch_mode = 1

[connection signal="body_entered" from="hand/grab_area" to="hand" method="_on_grab_area_body_entered"]
[connection signal="body_exited" from="hand/grab_area" to="hand" method="_on_grab_area_body_exited"]
[connection signal="timeout" from="loop_timer" to="hand" method="_on_timer_timeout"]
